--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
         port.</string>
     <string name="error_unknown">The serial port can not be opened for an unknown
         reason.</string>
+    <string name="pushbuttonstring">PushButton : </string>
 
 </resources>
